@@ -1,10 +1,18 @@
-20060401:
+20070502:
+- added support for setting the output device's volume size explicitly
+  (patch by Sean Walmsley)
+- minor cleanups
+- make locking more solid
+  (in theory [only], a deadlock could have occurred)
+- assert() everything
+
+20070401:
 - prefix name of executable before every message
 - added some missing newlines
 - set dependency for "make install" on "make"
   (i.e. "make install" also builds mbuffer)
 
-20060317:
+20070317:
 - fix: mbuffer erroneously return with EXIT_SUCCESS when it got 
        interrupted by SIGINT or SIGTERM
 
